--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,8 @@
 name: acronym
 description: A simple and lightweight package to generate acronyms.
 version: 0.1.0
-# homepage: https://www.example.com
+homepage: https://jxstxn.de
+repository: https://github.com/jxstxn1/acronym
 
 environment:
   sdk: '>=2.14.4 <3.0.0'
