Writing Docs, adding NoStopWords, add more tests

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: acronym
-description: A simple and lightweight package to generate acronyms.
-version: 0.1.0
+description: A simple, lightweight and easy to use package to generate acronyms.
+version: 0.2.0
 homepage: https://jxstxn.de
 repository: https://github.com/jxstxn1/acronym
 
