--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,15 +3,13 @@ description: A simple, lightweight and easy to use package to generate acronyms.
 version: 0.4.0
 homepage: https://jxstxn.de
 repository: https://github.com/jxstxn1/acronym
+issue_tracker: https://github.com/jxstxn1/acronym/issues
 
 environment:
-  sdk: '>=2.14.4 <3.0.0'
-
+  sdk: '>=2.18.0 <3.0.0'
 
 dependencies:
   recase: ^4.0.0
-
-  
 
 dev_dependencies:
   lint: ^1.0.0
