--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,6 +5,9 @@ homepage: https://jxstxn.de
 repository: https://github.com/jxstxn1/acronym
 issue_tracker: https://github.com/jxstxn1/acronym/issues
 
+topics:
+ - acronym
+
 environment:
   sdk: '>=2.18.0 <3.0.0'
 
@@ -12,5 +15,5 @@ dependencies:
   recase: ^4.0.0
 
 dev_dependencies:
-  lint: ^1.0.0
+  lint: ^2.0.1
   test: ^1.16.0
